# Aine-Engine

./: .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
editor/: CMakeLists.txt
editor/include/: EditorApplication.h
editor/src/: EditorApplication.cpp  main.cpp
engine/: CMakeLists.txt
engine/include/Aine/Core/: Application.h  Core.h  Layer.h  Log.h  Time.h  Window.h
engine/include/Aine/Event/: ApplicationEvent.h  Event.h
engine/include/Aine/ImGui/: ImGuiLayer.h
engine/include/Aine/Render/: RHIContext.h  Renderer.h  RendererAPI.h
engine/include/Platform/Render/: VulkanContext.h  VulkanUtils.h
engine/include/Platform/Window/: SDLWindow.h
engine/src/: Application.cpp
engine/src/Aine/Core/: Application.cpp  Layer.cpp  Log.cpp  Time.cpp  Window.cpp
engine/src/Aine/ImGui/: ImGuiLayer.cpp
engine/src/Aine/Platform/Vulkan/: VulkanContext.cpp
engine/src/Aine/Platform/Window/: SDLWindow.cpp
engine/src/Aine/Render/: Renderer.cpp
